# cmake-cpp-templates

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
app/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cc
configured/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/geometry_lib/: 2d_compute.cc  2d_compute.hpp  2d_object.cc  2d_object.hpp  CMakeLists.txt  Makefile  cmake_install.cmake  position.cc  position.hpp
tests/: CMakeLists.txt  testdemo.cc
